--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:NAIST-Archlab/conv-mark.git
 [submodule "conv-c2d"]
 	path = conv-c2d
-	url = git@github.com:NAIST-Archlab/conv-mark.git
+	url = git@github.com:NAIST-Archlab/conv-c2d.git
